poke/testsuite/poke.pkl/attr-diag-1.pk
/* { dg-do compile } */

defvar a = 1U'sssize; /* { dg-error "" } */
